# lsn_oop

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_Category_py.html  z_145eef247bfb46b6_Product_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_utils_py.html
src/: 14.1_main.py  14_2_main.py  15.1_main.py  Category.py  Product.py  category.py  product.py  utils.py
src/lesson_14/: task_2.py
src/lesson_16/: task_1.py
tests/: conftest.py  test_Category.py  test_Product.py  test_utils.py
