[project]
name = "lsn-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "dosed",email = "e.nmitenin@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
develop = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
